--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- Responsive Tabs -->
     <link rel="stylesheet" href="css/responsive-tabs.css">
+    
 
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -71,7 +72,7 @@
                 </div>
 
                 <div id="home-btn">
-                    <a href="#about">
+                    <a href="page2.html">
                         <button type="button" class="btn-general btn-home" title="Go Ahead !!">Explore Now</button>
                     </a>
                 </div>
@@ -669,6 +670,7 @@
 
     <!-- Java(JQuery) Carousal File -->
     <script src="jss/owl.carousel.min.js"></script>
+    
 
     <!-- Responsive Tabs -->
 
