--- a/page2.html
+++ b/page2.html
@@ -3,46 +3,73 @@
 
 <head>
 
-
     <!-- Title -->
-    <title>Xtended Photography</title>   
-    
+    <title>Xtended Photography</title>
+
+    <!-- Important meta tags -->
+    <meta name="keywords" content=" website,HTML,html,format" />
+    <meta name="description" content="HTML tutorial,create website." />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width initial-scale=1">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon/favicon.ico">
+
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:100,200,300,400,500,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="css/fontawesome/font-awesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome/font-awesome.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="css/style2.css">
+
+    <!-- Lightbox CSS -->
+    <link rel="stylesheet" href="css/lightbox.min.css">
+
 </head>
 
 <body>
-   
-   <div class = "home-bg" >
-   <img src="img/wp2930878-iron-man-suits-hd-wallpaper.jpg">
-</div>
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
+
+    <div class="gallery">
+        <a href="img/imgs/20180218_174500-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/20180218_174500-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/20180622_174557jpg.0-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/20180622_174557jpg.0-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/20180623_135122jpg.0-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/20180623_135122jpg.0-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/20190503_125937-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/20190503_125937-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02366-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/DSC02366-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02367-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/DSC02367-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/dsc02372.jpg" data-lightbox="mygallery"><img src="img/imgs/dsc02372.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02373.JPG" data-lightbox="mygallery"><img src="img/imgs/DSC02373.JPG" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02380.JPG" data-lightbox="mygallery"><img src="img/imgs/DSC02380.JPG" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02381-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/DSC02381-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/DSC02384-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/DSC02384-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200516-WA0031.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200516-WA0031.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200518-WA0004-01.jpeg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200518-WA0004-01.jpeg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200527-WA0003.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200527-WA0003.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200614-WA0015.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200614-WA0015.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200702-WA0000.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200702-WA0000.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200702-WA0001.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200702-WA0001.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+        <a href="img/imgs/IMG-20200802-WA0003.jpg" data-lightbox="mygallery"><img src="img/imgs/IMG-20200802-WA0003.jpg" data-lightbox="mygallery" height="240" width="240"></a>
+    </div>
 
 
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
+
+
+
+
+
+
+
     <script src="jss/jquery-3.5.0.js"></script>
     <script src="jss/bootstrap/bootstrap.js"></script>
-    <script src="jss/java.js"></script>
-</body>
-
-</html>
+    <script src="jss/script2.js"></script>
+    <!-- Lighbox JS -->
+    <script src="jss/lightbox-plus-jquery.min.js"></script>
+</body></html>
